@startuml
set namespaceSeparator ::

class "custom_polar_beat_ui_v2::controller::controller.dart::Controller" {
  {static} -Controller _instance
  +Lock lock
  {static} +dynamic getController()
  +void toDebugAuthCode()
  +Future<bool> fetchToken()
  +Future<bool> fetchProfile()
  +Future<String> fetchTokenOnStart()
  +void updateToken()
  +void reset()
  +Future<String> fetchId()
  +void updateId()
  +void toGetTokenFromPolar()
  +void toViewMenu()
  +void toLoginToPolar()
  +Future<void> registerUser()
  +Future<bool> fetchActivities()
  +Future<bool> fetchSavedActivities()
}

"custom_polar_beat_ui_v2::controller::controller.dart::Controller" o-- "custom_polar_beat_ui_v2::controller::controller.dart::Controller"
"custom_polar_beat_ui_v2::controller::controller.dart::Controller" o-- "synchronized::synchronized.dart::Lock"

class "custom_polar_beat_ui_v2::controller::net_controller.dart::NetController" {
  -String _token
  -String _id
  +void setToken()
  +void setId()
  +Future<bool> registerUser()
  +Future<String> fireTokenDataRequest()
  +Future<Map<String, Object>> userProfileRequest()
  +Future<String> fetchNotifications()
  +Future<String> startFetchActivityDataTransaction()
  +Future<List<Map<String, Object>>> getDailyActivities()
  +Future<List<Map<String, Object>>> processDailyActivities()
  +Future<String> getExerciseSamples()
  +Future<String> processExercisesSample()
  +Future<String> getExerciseGPX()
  +Future<String> getExerciseZones()
  +Future<List<Map<String, Object>>> exerciseCoordinator()
}

class "custom_polar_beat_ui_v2::main.dart::GetAuthCodeFromPolar" {
  +State<StatefulWidget> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "custom_polar_beat_ui_v2::main.dart::GetAuthCodeFromPolar"

class "custom_polar_beat_ui_v2::main.dart::ViewLogic" {
  +Widget displayState()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "custom_polar_beat_ui_v2::main.dart::ViewLogic"

class "custom_polar_beat_ui_v2::model::db_model.dart::DataBase" {
  {static} -Database _database
  {static} -String _databaseName
  +NetController net
  +Future<bool> initDatabase()
  +void updateTokenTable()
  +void updateProfileTable()
  +void updateExercisesTable()
  +void dropTokenTable()
  +void dropExercisesTable()
  +void dropProfileTable()
  +Future<bool> reset()
  +void createTokenTable()
  +void createProfileTable()
  +void createExercisesTable()
  +Future<String> fetchFromTokenTable()
  +Future<Map<dynamic, dynamic>> fetchProfile()
  +Future<bool> fetchAccessToken()
  +Future<bool> registerUser()
  +Future<bool> fireUserInfoRequest()
  +Future<bool> fetchActivities()
  +Future<bool> fetch()
  +Future<bool> fetchSavedActivities()
}

"custom_polar_beat_ui_v2::model::db_model.dart::DataBase" o-- "sqflite_common::sqlite_api.dart::Database"
"custom_polar_beat_ui_v2::model::db_model.dart::DataBase" o-- "custom_polar_beat_ui_v2::controller::net_controller.dart::NetController"
"flutter::src::foundation::change_notifier.dart::ChangeNotifier" <|-- "custom_polar_beat_ui_v2::model::db_model.dart::DataBase"

class "custom_polar_beat_ui_v2::model::model.dart::AppState" {
  -PHASE _state
  +List<Map<dynamic, dynamic>> savedActivities
  +List<Map<dynamic, dynamic>> newActivities
  +Map<dynamic, dynamic> profile
  +PHASE state
  +void setstate()
  +void setActivities()
  +void setNewActivities()
  +void setProfile()
}

"custom_polar_beat_ui_v2::model::model.dart::AppState" o-- "custom_polar_beat_ui_v2::model::phases.dart::PHASE"
"flutter::src::foundation::change_notifier.dart::ChangeNotifier" <|-- "custom_polar_beat_ui_v2::model::model.dart::AppState"

class "custom_polar_beat_ui_v2::model::phases.dart::PHASE" {
  +int index
  {static} +List<PHASE> values
  {static} +PHASE startingUserMenu
  {static} +PHASE loginToPolar
  {static} +PHASE getTokenFromPolar
  {static} +PHASE viewMenu
  {static} +PHASE showData
}

"custom_polar_beat_ui_v2::model::phases.dart::PHASE" o-- "custom_polar_beat_ui_v2::model::phases.dart::PHASE"
"dart::core::Enum" <|-- "custom_polar_beat_ui_v2::model::phases.dart::PHASE"

class "custom_polar_beat_ui_v2::view::client_menu_api.dart::ClientMenu" {
  +ClientMenuAPI createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "custom_polar_beat_ui_v2::view::client_menu_api.dart::ClientMenu"

class "custom_polar_beat_ui_v2::view::client_menu_api.dart::ClientMenuAPI" {
  +Map<dynamic, dynamic> msg
  +Future<bool> fireUserInfoRequest()
  +void initState()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "custom_polar_beat_ui_v2::view::client_menu_api.dart::ClientMenuAPI"

class "custom_polar_beat_ui_v2::view::exercise_view.dart::ExerciseView" {
  +Map<dynamic, dynamic> data
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "custom_polar_beat_ui_v2::view::exercise_view.dart::ExerciseView"

class "custom_polar_beat_ui_v2::view::get_token_from_polar.dart::GetTokenFromPolar" {
  +TokenRequestToPolar createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "custom_polar_beat_ui_v2::view::get_token_from_polar.dart::GetTokenFromPolar"

class "custom_polar_beat_ui_v2::view::get_token_from_polar.dart::TokenRequestToPolar" {
  +Future<bool> msg
  +Future<bool> fetchAccessToken()
  +Future<void> registerUser()
  +void initState()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "custom_polar_beat_ui_v2::view::get_token_from_polar.dart::TokenRequestToPolar"

class "custom_polar_beat_ui_v2::view::login_to_polar_web.dart::LoginToPolarWeb" {
  +_LoginToPolarWebState createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "custom_polar_beat_ui_v2::view::login_to_polar_web.dart::LoginToPolarWeb"

class "custom_polar_beat_ui_v2::view::login_to_polar_web.dart::_LoginToPolarWebState" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "custom_polar_beat_ui_v2::view::login_to_polar_web.dart::_LoginToPolarWebState"

class "custom_polar_beat_ui_v2::view::show_data.dart::ShowData" {
  +RequestAndShow createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "custom_polar_beat_ui_v2::view::show_data.dart::ShowData"

class "custom_polar_beat_ui_v2::view::show_data.dart::RequestAndShow" {
  +List<Map<dynamic, dynamic>> msg
  +List<Map<dynamic, dynamic>> msg2
  +Future<bool> fetchActivities()
  +Future<bool> fetchSavedActivities()
  +void initState()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "custom_polar_beat_ui_v2::view::show_data.dart::RequestAndShow"

class "custom_polar_beat_ui_v2::view::starting_screen.dart::StartingScreen" {
  +State<StatefulWidget> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "custom_polar_beat_ui_v2::view::starting_screen.dart::StartingScreen"

class "custom_polar_beat_ui_v2::view::starting_screen.dart::DebugAuthCode" {
  +Future<String> msg
  +void initState()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "custom_polar_beat_ui_v2::view::starting_screen.dart::DebugAuthCode"


@enduml
